--- a/css/styles.css
+++ b/css/styles.css
@@ -3,12 +3,11 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 body{
-    margin: 0;
+    margin: 0 500px;
     background-color: #340a3fd7;
-    width: 100%;
-    display: flex; /* responsible for moving content in container */
+    width: 960%;
+    /* display: flex; */
     justify-content: center;
-    margin-left: 50px;
 }
 .container{
     width: 960px;
@@ -17,9 +16,9 @@ body{
     margin-right: 60px;
     justify-content: center;
 }
- .container h1{
+ .container h3{
     text-align: center;
-    text-transform: uppercase;
+    font-size: 25px;
 }
 .container section form{
     width: 100%;
@@ -74,17 +73,19 @@ body{
 .container input{
    height: 40px;
 }
-.container h3{ font-size: 35px;
+.container h1{ font-size: 30px;
+    text-transform: uppercase;
+    text-align: center;
 }
 .container .flex form .fin{
     display: flex;
 }
 .container form .submit{
-    /* background-color: purple; */
+    background-color:#340a3fd7;
     color: white;
     cursor: pointer;
     text-transform: uppercase;
-    width: 20%;
+    /* width: 20px; */
     margin-left: 300px; 
     text-align: center;
     padding-top:50px    
